# Hooky

./: README.md  banner.py  hooky_automated.py  hooky_config.py  hooky_easy.py  hooky_interactive.py  hooky_native.py  hooky_pattern_loader.py  hooky_pattern_loader_enhanced.py  js_to_json_converter.py  method_discovery.py  pyproject.toml  requirements.txt
config-examples/: com.example.keystoretest2.json  it.test.app.json  sample-json-pattern-enhanced-2.json  sample-json-pattern-enhanced.json  sample-json-pattern-examples.json  test.json
frida-scripts/: modular-frida-hooking-pattern.js
