[project]
name = "Hooky"
version = "0.1.0"
description = "Hooky is a dynamic analysis tool for mobile application security testing and runtime instrumentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "frida==16.7.19",
    "frida-tools==13.0.0",
    "prompt-toolkit==3.0.52",
    "pygments==2.19.2",
    "pyyaml==6.0.2",
    "wcwidth==0.2.13",
    "websockets==13.1",
]
